# mcp_cli

./: README.md  mcp.json  pyproject.toml
docs/: 01-PRD.md  02-Design.md  03-TestingGuide.md
mcp-docs/: mcp-test.md
src/mcp_cli/: __init__.py  client_factory.py  config.py  dynamic_parser.py  exceptions.py  guide_generator.py  main.py  output.py  schema_to_argparse.py
src/mcp_test/: __init__.py  server.py
